button changed to an anchor element

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <body class="body">
     <div class="page">
       <header class="header">
-        
           <img class="header__logo" src="./images/logo.png" alt="logo practicum art gallery">
       </header>
 
@@ -104,9 +103,8 @@
                 derecha.
               </p>
             </div>
-            <button class="places__button" type="button">
-              <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>              
-            </button>
+              <a class="link" href="">Compra esta obra de arte como NFT</a>              
+            
           </div>
 
           <div class="places__item">
@@ -141,11 +139,8 @@
                 de Primer Ministro del Reino Unido.
               </p>
             </div>
-
-            <button class="places__button" type="button">
-              <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>
-            </button>
-          </div>
+              <a class="link" href="">Compra esta obra de arte como NFT</a>
+            </div>
 
           <div class="places__item">
             <div class="places__title places__title-USA">
@@ -175,9 +170,7 @@
                 matrícula completa.
               </p>
             </div>
-            <button class="places__button" type="button">
-              <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>
-            </button>
+              <a class="link" href="">Compra esta obra de arte como NFT</a>
           </div>
 
           <div class="places__item">
@@ -216,10 +209,7 @@
                 ríos y arroyos que proporcionan agua en todo el país
               </p>
             </div>
-            <button
-              class="places__button places__button-burundi" type="button">
-            <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>
-            </button>
+            <a class="link" href="">Compra esta obra de arte como NFT</a>
           </div>
 
           <div class="places__item">
@@ -242,9 +232,7 @@
                 por sus calles y disfrutando de su cálida y fiestera cultura
               </p>
             </div>
-            <button class="places__button" type="button">
-              <a class="places__button-link" href="">Compra esta obra de arte como NFT</a>
-            </button>
+              <a class="link" href="">Compra esta obra de arte como NFT</a>
           </div>
         </section>
 
@@ -258,9 +246,7 @@
               <p class="cover__paragraph-edit">404, Avenida</p>
               <p class="cover__paragraph-edit">Tim Berners-Lee.</p>
             </div>
-            <button class="cover__button" type="button">
-              <a class="cover__button-link" href="">Comprar entradas</a>            
-            </button>
+              <a class="link-cover" href="">Comprar entradas</a>            
           </div>
         </section>
       </main>
