simiti image expanded and alternative text added

--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
 
         <section class="photo-grid">
           <img class="photo-grid__item" src="./images/ciudad-vista-panoramica.jpg" alt="foto de la vista panorámica de una ciudad" />
-          <img class="photo-grid__item" src="./images/Criccieth.jpg" alt="foto de Criccieth, Gales" />
+          <img class="photo-grid__item" src="./images/Criccieth.jpg" alt="foto panorámica de Criccieth en Gales" />
           <img class="photo-grid__item" src="./images/atardecer.jpg" alt="un atardecer en una ciudad" />
-          <img class="photo-grid__item" src="./images/kiev.jpg" alt="foto panorámica de Kiev, Ucrania" />
+          <img class="photo-grid__item" src="./images/kiev.jpg" alt="foto panorámica de Kiev en Ucrania" />
           <img class="photo-grid__item" src="./images/casas.jpg" alt="casas en un lugar remoto" />
           <img class="photo-grid__item" src="./images/hombre-casa-triangular.jpg" alt="hombre en una casa triangular antigua" />
-          <img class="photo-grid__item" src="./images/letreros.jpg" alt="" />
-          <img class="photo-grid__item" src="./images/paisaje-verde.jpg" alt="paisaje-verde" />
+          <img class="photo-grid__item" src="./images/letreros.jpg" alt="letreros ambientales" />
+          <img class="photo-grid__item" src="./images/paisaje-verde.jpg" alt="paisaje donde se ve el pasto, unas casas al fondo y nubes en el cielo" />
         </section>
 
         <section class="places">
           <div class="places__item">
             <p class="places__title">Kiev, Ucrania</p>
-            <img class="places__image" src="./images/Ucrania.jpg" alt="" />
+            <img class="places__image" src="./images/Ucrania.jpg" alt="foto panorámica de Kiev en Ucrania" />
             <p class="places__artist">ARTISTA</p>
             <p class="places__artist-name">
               Natalia Dolgushina, productora de contenidos
@@ -109,7 +109,7 @@
 
           <div class="places__item">
             <p class="places__title">Criccieth, Gales</p>
-            <img class="places__image" src="./images/Gales.jpg" alt="" />
+            <img class="places__image" src="./images/Gales.jpg" alt="foto panorámica de Criccieth en Gales" />
             <p class="places__artist">ARTISTAS</p>
             <div class="places__artist-name">
                 <p class="places__artist-name places__artist-name-edit"> 
@@ -147,7 +147,7 @@
               <p class="places__title-USA-edit">Berea, Estados</p>
               <p class="places__title-USA-edit">Unidos</p>
             </div>
-            <img class="places__image" src="./images/__USA.jpg" alt="" />
+            <img class="places__image" src="./images/__USA.jpg" alt="foto de una carretera en Estados Unidos" />
             <p class="places__artist">ARTISTA</p>
             <p class="places__artist-name">Travis Turner, autor y editor</p>
             <div class="places__paragraph">
@@ -175,7 +175,7 @@
 
           <div class="places__item">
             <p class="places__title">Muramvya, Burundi</p>
-            <img class="places__image" src="./images/Burundi.jpg" alt="" />
+            <img class="places__image" src="./images/Burundi.jpg" alt="monumento en Muramvya en Burundi" />
             <p class="places__artist">ARTISTA</p>
             <p class="places__artist-name">
               Grevisse Kenguruka, editor técnico
